Update to Spring Boot 3.1 - breaking change in hateoas - remove test logic from production code